- Tweaking front page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
     = render "layouts/header"
     #content_container
       #goal
-        %h2 The Goal:
+        %h2 The Challenge:
         Make it easier / more fun for the next person to
         learn what ever you are learning right now.
 
