- Tweaking front page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,7 +13,7 @@
       %a.toggle_tip.small Learn more >
     .tip_text{:style => "display: none;"}
       %p.small Can you find a way to make what you're learning easier / more fun for someone else to learn?
-      %p.small Just pretend you're helping your younger sibling learn something. How would you do it?
+      %p.small You're in the best position to teach someone because you just figured it out yourself.
       %p.small= link_to("Read more >", for_students_about_index_path)
   .section.tip.last
     %h2
