--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -66,7 +66,7 @@
 
   %p= link_to("View the whole lesson >", example)
   
-  %iframe{:width => "560", :height => "315", :src => "http://www.youtube.com/embed/#{example.videos.first.youtube_id}", :frameborder => "0", :allowfullscreen => "allowfullscreen"}
+  %iframe{:width => "560", :height => "315", :src => "http://www.youtube.com/embed/#{example.media.first.youtube_id}", :frameborder => "0", :allowfullscreen => "allowfullscreen"}
 
   %p
     %b Other Examples:
