- tweaked about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -20,12 +20,12 @@
   I know there are many great teachers and schools out there that
   are engaging and challenging students in creative ways every day,
   but from my experience and observations such a quality education
-  is, unfortunately, more the exception then the norm.
+  is, unfortunately, more the exception than the norm.
 %p
-  I'm about to have my first child and the thought of asking him or her
+  My wife and I just recently had our first child and the thought of asking her
   to attend schools every day for 15+ years that focus more on memorization
   than understanding, more on obedience rather than creativity, more on
-  test-taking than on creating something of value... Well, the thought is not
+  test-taking than on creating something of value... Well, that thought is not
   one I can live with comfortably. Again, I know many classrooms, teachers,
   and schools exceed this description, but I truly believe there's no reason
   that such an environment ever has to exist in a school.
