--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -198,6 +198,10 @@ form
     margin: 0
     padding: 0
 
+  .strategies
+    clear: both
+    padding-top: 30px
+    text-align: center
 
 .explanation_box
   padding: 12px
