--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -17,3 +17,5 @@
     = link_to("Press", press_about_index_path)
     = link_to("Donate", donate_about_index_path)
 
+  .strategies
+    = link_to("Strategies for using Upside Down Academy in your classroom >", strategies_about_index_path)
