--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,7 +6,10 @@
     .tip_text{:style => "display: none;"}
       %p.small Every time your students learn something have them try to teach it to someone else.
       %p.small The transition from "learning" to "teaching" can dramatically impact their learning and engagement.
-      %p.small= link_to("Read more >", for_teachers_about_index_path)
+      %p.small
+        = link_to("Read more >", for_teachers_about_index_path)
+        &nbsp; &nbsp; &nbsp; &nbsp;
+        = link_to("Classroom strategies >", strategies_about_index_path)
   .section.tip
     %h2
       For Students
