- another strategies point

--- a/app/views/about/strategies.html.haml
+++ b/app/views/about/strategies.html.haml
@@ -29,16 +29,23 @@
   %li
     .strategy
       .header
-        Do Frequent Lessons
+        Create Lessons Frequently
       %p Practice makes perfect. Having students create more than one lesson can be very beneficial.
-      %p= link_to("Do Frequent Lessons >", "http://upsidedownacademy.org/lessons/25_upside-down-academy_strategies-for-using-this-site_do-frequent-lessons")
+      %p= link_to("Create Lessons Frequently >", "http://upsidedownacademy.org/lessons/25_upside-down-academy_strategies-for-using-this-site_do-frequent-lessons")
 
   %li
     .strategy
       .header
         Give The Lessons Specific Purpose
       %p Giving the students a sense of purpose in creating their lessons can benefit their motivation.
-      %p= link_to("Do Frequent Lessons >", "http://upsidedownacademy.org/lessons/27_upside-down-academy_strategies-for-using-this-site_give-the-lessons-specific-purpose")
+      %p= link_to("Give The Lessons Specific Purpose >", "http://upsidedownacademy.org/lessons/27_upside-down-academy_strategies-for-using-this-site_give-the-lessons-specific-purpose")
+
+  %li
+    .strategy
+      .header
+        Individuals vs. Groups Creating Lessons
+      %p There are benefits to having students create lessons as a group or as individuals.
+      %p= link_to("Individual vs. Group Lessons >", "http://upsidedownacademy.org/lessons/29_upside-down-academy_strategies-for-using-this-site_individual-group-lessons")
 
 %br
 
