- tweaking "about" text

--- a/app/views/about/strategies.html.haml
+++ b/app/views/about/strategies.html.haml
@@ -2,6 +2,14 @@
 
 %h2 Strategies For Using Upside Down Academy In Your Classroom
 
+%p At it's heart Upside Down Academy is about having students help each other.
+
+%p
+  Upside Down Academy was built to make it easier for students to work together
+  and teach each other, lessening the load on the teacher, fostering a more collaborative
+  and supportive environment, and giving students more responsibility over their
+  own education.
+
 %p Here are some tips and tricks for using Upside Down Academy in your classroom.
 
 %ol.strategies_list
