--- a/app/views/about/for_teachers.html.haml
+++ b/app/views/about/for_teachers.html.haml
@@ -1,12 +1,30 @@
 - @title = "For Teachers"
 
+%h3 Students Helping Each Other
+
+%p
+  At it's heart Upside Down Academy is about making it easier
+  for students to help each other learn. We believe that the more
+  students help each other, the more they take control of their own
+  futures, and the more they learn to work with each other in a collaborative
+  rather than competitive environment, the more everyone will benefit.
+
+%p
+  When students help each other, they develop better social skills, learn to think
+  empathetically, improve their communication skills, and create a community
+  environment that can reduce bullying. The more students help each other, the more
+  the teacher is freed up to spend time improving the overall environment, rather than
+  just keeping certain students inline or just helping students that are struggling
+  with the material.
+
+%br
 %h3 Learning By Teaching
 
 %p
   It's said that the best way to learn is to try and teach.
-  When you try and teach something you quickly recognize the gaps
-  in your learning. You also are more likely to figure out the context
-  necessary to truly understand the material.
+  With Upside Down Academy students create lessons to help their fellow students
+  learn new material. In doing so they have the opportunity to recognize the
+  gaps in their own understanding and further reinforce their own learning.
 
 %br
 %h3 Project Based Learning
@@ -18,7 +36,7 @@
 
 %p
   Of course, while they try to figure out how best to teach the material,
-  they're also reinforcing their learning of the material.
+  they're also creating better mechanisms for their own understanding.
 
 
 %br
