--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,17 +1,37 @@
 - @title = "About"
 
 %p Upside Down Academy is a work in progress.
+
+%br
+%br
+
 %p
-  The site was created to help make it easier for educators everywhere
-  to make education more engaging on a number of levels.
+  At it's heart Upside Down Academy is about making it easier
+  for students to help each other learn. We believe that the more
+  students help each other, the more they take control of their own
+  futures, and the more they learn to work with each other in a collaborative
+  rather than competitive environment, the more everyone will benefit.
+
 %p
-  It is designed to make it easy to turn any lesson in to project-based learning,
-  to encourage students to think empathetically, creatively, and improve their communication skills.
+  When students help each other, they develop better social skills, learn to think
+  empathetically, improve their communication skills, and create a community
+  environment that can reduce bullying. The more students help each other, the more
+  the teacher is freed up to spend time improving the overall environment, rather than
+  just keeping certain students inline or just helping students that are struggling
+  with the material.
+
+%br
+%br
+
 %p
-  Trying to teach something you have just learned is a great way to challenge your
-  understanding of the material. By taking student efforts to teach and putting them online it not only
-  creates a wealth of "peer-tutoring" resources, but also gives students a greater sense
-  of impact: they're helping make life easier for their fellow students.
+  The site is designed to make it easy to turn any lesson in to project-based learning
+  with a purpose. By creating lessons to teach their peers, students do creative work
+  that has a true benefit beyond just a grade.
+%p
+  In addition, trying to teach something you have just learned is a great way to challenge your
+  understanding of the material. Students are creating lessons that they can refer back to later on
+  and that accumulate in to a wealth of "peer-tutoring" resources that can be used by all
+  students and teachers as great supplemental material for learning.
 
 %br
 %br
