- fixing front page copy

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,8 +4,8 @@
       For Teachers
       %a.toggle_tip.small Learn more >
     .tip_text{:style => "display: none;"}
-      %p.small When students help each other learn everyone involved, benefits.
-      %p.small Creativity, community, and responsibility go up, while bullying, workload, and boredom go down.
+      %p.small Having students create lessons trying to teach each other can change the dynamic of a classroom.
+      %p.small It can foster community, creativity, and empathy, while giving the students work a sense of purpose.
       %p.small
         = link_to("Read more >", for_teachers_about_index_path)
         &nbsp; &nbsp; &nbsp; &nbsp;
