fixing bug with adding a video with no title

--- a/app/views/videos/_video_form.html.haml
+++ b/app/views/videos/_video_form.html.haml
@@ -16,7 +16,7 @@
     $('#upload_form').submit(this.checkForFile);
   })
 
-- unless @form.info.nil?
+- unless @form_info["url"].nil?
   = form_for :video, :url => @form_info["url"] + "?nexturl=#{url_for(assign_youtube_id_path(:video_id => @video.id, :only_path => false))}", :html => {:enctype => "multipart/form-data", :id => 'upload_form'} do |f|
     #errMsg{:style => "display: none; color: red;"}
       You need to specify a file.
@@ -31,7 +31,7 @@
   %br
 
   = link_to_function("I've already uploaded my video to YouTube.", "$('#video_url').toggle()")
-#video_url{:style => @form.info.nil? ? '' : 'display: none;'}
+#video_url{:style => @form_info["url"].nil? ? '' : 'display: none;'}
   = form_for :video, :url => lesson_video_path(@lesson, @video), :method => :put do |f|
     %p
       %b Instructions
