tweaking copy to reference the puzzle school

--- a/app/views/about/contact.html.haml
+++ b/app/views/about/contact.html.haml
@@ -1,8 +1,9 @@
 - @title = "Contact"
 
 %p
-  You can reach me at
-  = mail_to("jared@upsidedownacademy.org")
+  Please contact 
+  = mail_to("upsidedownacademy@puzzleschool.com")
+  with any questions or concerns.
 
 %br
 %br
