--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,32 +1,17 @@
 - @title = "About"
 
-%p Upside Down Academy is a work in progress.
-
-%br
-%br
+%p Upside Down Academy is a work in progress. It was created by <a href='http://puzzleschool.com'>The Puzzle School</a>.
 
 %p
   At it's heart Upside Down Academy is about making it easier
-  for students to help each other learn. We believe that the more
-  students help each other, the more they take control of their own
-  futures, and the more they learn to work with each other in a collaborative
-  rather than competitive environment, the more everyone will benefit.
+  for students to help each other learn through a creative, open-ended process.
+  We like to think of such a process as a puzzle.
 
 %p
-  When students help each other, they develop better social skills, learn to think
-  empathetically, improve their communication skills, and create a community
-  environment that can reduce bullying. The more students help each other, the more
-  the teacher is freed up to spend time improving the overall environment, rather than
-  just keeping certain students inline or just helping students that are struggling
-  with the material.
-
-%br
-%br
-
-%p
-  The site is designed to make it easy to turn any lesson in to project-based learning
-  with a purpose. By creating lessons to teach their peers, students do creative work
-  that has a true benefit beyond just a grade.
+  The site is designed to make it easy to turn any lesson in to puzzle-based learning. 
+  By creating lessons to teach their peers, students do creative work that allows for autonomy (they can approach
+  the video how ever they want), requires developing strategies, learning from failure, and iterating in order
+  to get their video right, and, in creating a video that others can learn from, has a true benefit beyond just a grade.
 %p
   In addition, trying to teach something you have just learned is a great way to challenge your
   understanding of the material. Students are creating lessons that they can refer back to later on
@@ -35,31 +20,11 @@
 
 %br
 %br
-
-%p
-  I know there are many great teachers and schools out there that
-  are engaging and challenging students in creative ways every day,
-  but from my experience and observations such a quality education
-  is, unfortunately, more the exception than the norm.
-%p
-  My wife and I just recently had our first child and the thought of asking her
-  to attend schools every day for 15+ years that focus more on memorization
-  than understanding, more on obedience rather than creativity, more on
-  test-taking than on creating something of value... Well, that thought is not
-  one I can live with comfortably. Again, I know many classrooms, teachers,
-  and schools exceed this description, but I truly believe there's no reason
-  that such an environment ever has to exist in a school.
-
 %br
 %br
-
-%p An amazing education should be available to everyone.
-%p This site is one step toward trying to help with that.
-
 %br
 %br
-
-%p - Jared Cosulich
-%p
-  If you want to know more about me go here:
-  = link_to("Jared Cosulich", "http://about.me/jaredcosulich", :target => "_blank") 
+%br
+%br
+%br
+%br
