working in language about protege effect

--- a/app/views/about/for_teachers.html.haml
+++ b/app/views/about/for_teachers.html.haml
@@ -21,8 +21,10 @@
 %h3 Learning By Teaching
 
 %p
-  It's said that the best way to learn is to try and teach.
-  With Upside Down Academy students create lessons to help their fellow students
+  The
+  = link_to("Protégé Effect", 'http://ideas.time.com/2011/11/30/the-protege-effect/', :target => '_blank')
+  has been shown to be an effective way to learn.
+  With Upside Down Academy students leverage the Protégé Effect by creating lessons to help their fellow students
   learn new material. In doing so they have the opportunity to recognize the
   gaps in their own understanding and further reinforce their own learning.
 
@@ -36,7 +38,7 @@
 
 %p
   Of course, while they try to figure out how best to teach the material,
-  they're also creating better mechanisms for their own understanding.
+  they're also increasing their own understanding of the material.
 
 
 %br
