--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -5,16 +5,18 @@
 %p
   At it's heart Upside Down Academy is about making it easier
   for students to help each other learn through a creative, open-ended process.
-  We like to think of such a process as a puzzle.
 
 %p
   The site is designed to make it easy to turn any lesson in to puzzle-based learning. 
   By creating lessons to teach their peers, students do creative work that allows for autonomy (they can approach
   the video how ever they want), requires developing strategies, learning from failure, and iterating in order
   to get their video right, and, in creating a video that others can learn from, has a true benefit beyond just a grade.
+
 %p
-  In addition, trying to teach something you have just learned is a great way to challenge your
-  understanding of the material. Students are creating lessons that they can refer back to later on
+  In addition, trying to teach something you have just learned takes advantage of the
+  = link_to("Protégé Effect", 'http://ideas.time.com/2011/11/30/the-protege-effect/', :target => '_blank')
+  , a great way to help students challenge and increase their understanding of the material. 
+  Students are creating lessons that they can refer back to later on
   and that accumulate in to a wealth of "peer-tutoring" resources that can be used by all
   students and teachers as great supplemental material for learning.
 
