--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,8 +4,11 @@
       For Teachers
       %a.toggle_tip.small Learn more >
     .tip_text{:style => "display: none;"}
-      %p.small Having students create lessons trying to teach each other can change the dynamic of a classroom.
-      %p.small It can foster community, creativity, and empathy, while giving the students work a sense of purpose.
+      %p.small 
+        Upside Down Academy leverages the 
+        = link_to("Protégé Effect", 'http://ideas.time.com/2011/11/30/the-protege-effect/', :target => '_blank')
+        to help students learn through teaching.
+      %p.small It helps students identify gaps in their understanding and helps motivate them to fill in those gaps.
       %p.small
         = link_to("Read more >", for_teachers_about_index_path)
         &nbsp; &nbsp; &nbsp; &nbsp;
