--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -40,7 +40,7 @@
   %li= link_to("Create a lesson and make it a little easier for the next person >", new_lesson_path)
 %h3
   The best part is, because of the 
-  = "#{link_to("Protégé Effect", 'http://ideas.time.com/2011/11/30/the-protege-effect/', :target => '_blank')},"
+  = "#{link_to("Protégé Effect", 'http://ideas.time.com/2011/11/30/the-protege-effect/', :target => '_blank')},".html_safe
   you'll learn the material more effectively by creating the lesson.
 .separator
   
