tweaking about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -7,18 +7,20 @@
   for students to help each other learn through a creative, open-ended process.
 
 %p
-  The site is designed to make it easy to turn any lesson in to puzzle-based learning. 
-  By creating lessons to teach their peers, students do creative work that allows for autonomy (they can approach
-  the video how ever they want), requires developing strategies, learning from failure, and iterating in order
-  to get their video right, and, in creating a video that others can learn from, has a true benefit beyond just a grade.
-
+  The site is designed to make it easy to turn any lesson in to project-based learning. 
+  By creating lessons to teach their peers, a number of beneficial processes are encouraged:
+ 
+%ul
+  %li Students do creative work that allows for autonomy (they can approach the video how ever they want).
+  %li Students have an opportunity to iterate on their work, re-shooting, editing, and iterating toward a video they are proud of.
+  %li Students create something that has lasting value beyond just a grade and can actually be used by other students to learn.
+  %li 
+    While trying to teach the lesson students will be exposed to the 
+    = link_to("Protégé Effect", 'http://ideas.time.com/2011/11/30/the-protege-effect/', :target => '_blank')
+    where more learning takes place while trying to teach.
 %p
-  In addition, trying to teach something you have just learned takes advantage of the
-  = link_to("Protégé Effect", 'http://ideas.time.com/2011/11/30/the-protege-effect/', :target => '_blank')
-  , a great way to help students challenge and increase their understanding of the material. 
-  Students are creating lessons that they can refer back to later on
-  and that accumulate in to a wealth of "peer-tutoring" resources that can be used by all
-  students and teachers as great supplemental material for learning.
+  In addition to these potential benefits, students are creating lessons that they can refer back to later on,
+  both as refreshers of their own learning as well as a portfolio of projects they have completed.
 
 %br
 %br
