tweaking about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -6,13 +6,15 @@
   At it's heart Upside Down Academy is about making it easier
   for students to help each other learn through a creative, open-ended process.
 
+%br
+
 %p
   The site is designed to make it easy to turn any lesson in to project-based learning. 
   By creating lessons to teach their peers, a number of beneficial processes are encouraged:
  
 %ul
   %li Students do creative work that allows for autonomy (they can approach the video how ever they want).
-  %li Students have an opportunity to iterate on their work, re-shooting, editing, and iterating toward a video they are proud of.
+  %li Students have the opportunity to redesign, reshoot, edit, and iterate toward a video they are proud of.
   %li Students create something that has lasting value beyond just a grade and can actually be used by other students to learn.
   %li 
     While trying to teach the lesson students will be exposed to the 
