tweaking about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -9,8 +9,12 @@
 %br
 
 %p
-  The site is designed to make it easy to turn any lesson in to project-based learning. 
-  By creating lessons to teach their peers, a number of beneficial processes are encouraged:
+  The site is designed to make it easy to turn any lesson in to project-based learning.
+  Anything that a student is taught can become a project as a student tries to figure out
+  how to teach the same material to a peer in their own creative way.
+
+%p 
+  When students create lessons a number of beneficial processes are encouraged:
  
 %ul
   %li Students do creative work that allows for autonomy (they can approach the video how ever they want).
